Align all members to center top to fix cutoff and alignment issues

--- a/style.css
+++ b/style.css
@@ -325,20 +325,20 @@ nav {
 
 /* Gt. タッカン */
 .member-slice:nth-child(3) {
-    background-position: center 15%;
+    background-position: center top;
 }
 
-/* Vo. MI-CO (Center of face) */
+/* Vo. MI-CO */
 .member-slice:nth-child(4) {
     background-position: center top;
 }
 
 /* Gt. TAKUMI */
 .member-slice:nth-child(5) {
-    background-position: center 5%;
+    background-position: center top;
 }
 
-/* Ds. 福村 (Hat brim needs slight space) */
+/* Ds. 福村 */
 
 .member-slice:last-child {
     border-right: none;
